recheck error in gitHub

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>hello Jack</h2>
+    <h2>hello Jackfrit
+        Hie
+    </h2>
 </body>
 </html>
