--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>hello Jackfrit
-        Hie
-    </h2>
+
+
+    <!-- script file add -->
+     <script src="/dist/index.js"></script>
 </body>
 </html>
